THRIFT-3001 C# Equals fails for binary fields (byte[]) Client: C# Patch: Benjamin Schulz, Testcase added by Jens Geyer