compiler/cpp/src/generate/t_csharp_generator.cc
@@ -1298,7 +1298,7 @@ void t_csharp_generator::generate_csharp_struct_equals(ofstream& out, t_struct* 
           << normalize_name((*f_iter)->get_name()) << ") || (";
     }
     t_type* ttype = (*f_iter)->get_type();
-    if (ttype->is_container()) {
+    if (ttype->is_container() || (ttype->is_base_type() && (((t_base_type*)ttype)->is_binary()))) {
       out << "TCollections.Equals(";
     } else {
       out << "System.Object.Equals(";
